--- a/index.html
+++ b/index.html
@@ -148,6 +148,37 @@
     </div>
 </div>
 
+ <!-- ---------------Contact----------------- -->
+
+  <div id="contact">
+     <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title"> Contact me</h1>
+                <p> <i class="fa-regular fa-envelope"></i> mohitsahu1993@gmail.com</p>
+                <p> <i class="fa-solid fa-square-phone"></i> 9806324244</p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/mohitsahu1993" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://github.com/mohitsahu21" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/mohitsahu1993/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <a href="images/Mohit's Resume.pdf" download class="btn btn2">Download Resume</a>
+            </div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+            </div>
+        </div>
+     </div>
+       <div class="copyright">
+        <p>Copyright <i class="fa-regular fa-copyright"></i> 2023 Mohit Sahu All Rights Reserved.</p>
+       </div>
+  </div>
+
 
 
 
