--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
     </div>
     <div class="tab-contents active-tab" id="skills">
         <ul>
-            <li><span>Frontend</span><br>HTML, &nbsp;CSS, &nbsp;JavaScript,  &nbsp;ReactJS,  &nbsp;Bootstrap</li>
-            <li><span>Backend</span><br>NodeJS,  &nbsp; ExpressJS</li>
-            <li><span>DataBase</span><br>MongoDB/SQL</li>
-            <li><span>Other</span><br> GitHub,&nbsp;Python</li>
+            <li><span>Frontend</span><br><i class="fa-brands fa-html5 fa-beat-fade"></i>  HTML, &nbsp; <i class="fa-solid fa-file-code fa-beat-fade"></i> CSS, &nbsp; <i class="fa-brands fa-square-js fa-beat-fade"></i> JavaScript,  &nbsp; <i class="fa-brands fa-react fa-beat-fade"></i> ReactJS,  &nbsp; <i class="fa-brands fa-bootstrap fa-beat-fade"></i> Bootstrap</li>
+            <li><span>Backend</span><br> <i class="fa-brands fa-node fa-beat-fade"></i> NodeJS,  &nbsp; <i class="fa-brands fa-node-js fa-beat-fade"></i>  ExpressJS</li>
+            <li><span>DataBase</span><br> <i class="fa-solid fa-database fa-beat-fade"></i> MongoDB/SQL</li>
+            <li><span>Other</span><br><i class="fa-brands fa-github fa-beat-fade"></i> GitHub,&nbsp; <i class="fa-brands fa-python fa-beat-fade"></i> Python</li>
         </ul>
     </div>
     <div class="tab-contents" id="experience">
