--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <nav>
                 <h3 class="font-effect-neon">Portfolio.</h3>
                 <ul id="sidemenu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -72,13 +72,13 @@
 
             <!-- -------skills--------- -->
 
-   <div class="skills">
+   <div id="skills">
     <div class="tab-titles">
-        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+        <p class="tab-links active-link" onclick="opentab('skill')">Skills</p>
         <p class="tab-links" onclick="opentab('experience')">Experience</p> 
         <p class="tab-links" onclick="opentab('education')">Education</p>  
     </div>
-    <div class="tab-contents active-tab" id="skills">
+    <div class="tab-contents active-tab" id="skill">
         <ul>
             <li><span>Frontend</span><br><i class="fa-brands fa-html5 fa-beat-fade"></i>  HTML, &nbsp; <i class="fa-solid fa-file-code fa-beat-fade"></i> CSS, &nbsp; <i class="fa-brands fa-square-js fa-beat-fade"></i> JavaScript,  &nbsp; <i class="fa-brands fa-react fa-beat-fade"></i> ReactJS,  &nbsp; <i class="fa-brands fa-bootstrap fa-beat-fade"></i> Bootstrap</li>
             <li><span>Backend</span><br> <i class="fa-brands fa-node fa-beat-fade"></i> NodeJS,  &nbsp; <i class="fa-brands fa-node-js fa-beat-fade"></i>  ExpressJS</li>
