--- a/index.html
+++ b/index.html
@@ -167,12 +167,13 @@
                 <a href="images/Mohit's Resume.pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
-                <form>
+                <form name='submit-to-google-sheet'>
                     <input type="text" name="Name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="Your Email" required>
+                    <input type="email" name="Email" placeholder="Your Email" required>
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                     <button type="submit" class="btn btn2">Submit</button>
                 </form>
+                <span id="msg"></span>
             </div>
         </div>
      </div>
@@ -210,6 +211,27 @@
         sidemenu.style.right = "0"
     }
 </script>
+
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwFJCOiOpWjskO2U8u-kOv5sCQcoXzHZm3opIAWJfhrzJZERd6xBgOQjmFaQddY39A/exec'
+    const form = document.forms['submit-to-google-sheet'];
+    const msg = document.getElementById("msg");
+
+  
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response =>{
+             msg.innerHTML = "Message Sent Successfully"
+             setTimeout(function(){
+                msg.innerHTML = ""
+             },3000)
+             form.reset()
+            }
+        )
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
     
 </body>
 </html>
