--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         Technologies Used: ReactJs, NodeJs, Express,MongoDB,JWT Authentication,Cloudinary,HTML,CSS etc.
                         
                         </p>
-                    <a href="https://event-proposal-frontend.onrender.com/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://event-proposal-frontend.onrender.com/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -132,7 +132,7 @@
                         Authentication,Cloudinary,HTML,CSS , Materialize css etc.
                         
                         </p>
-                    <a href="https://instaclone-obaa.onrender.com"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://instaclone-obaa.onrender.com" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -142,7 +142,7 @@
                     <p>Here is SNAPSHOT app which creates a simple gallery where you can search the photos by keywords, and change the category based on given options such as Mountain, Beaches, Birds, and Food. Once you hover over the images, you will get the zoom-in images.
 
                     </p>
-                    <a href="https://snapshot-gmvf.onrender.com"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://snapshot-gmvf.onrender.com" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
